--- a/ContactsManager.UI/Properties/launchSettings.json
+++ b/ContactsManager.UI/Properties/launchSettings.json
@@ -12,7 +12,7 @@
       "commandName": "Project",
       "dotnetRunMessages": true,
       "launchBrowser": true,
-      "applicationUrl": "http://localhost:5197",
+      "applicationUrl": "https://localhost:5197",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
